# neolang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  testfile.neo
docs/: README.md  TODO.md
src/: arena.c  entry.c  limits.h  sub_types.c  sub_types.h  token_subtypes.c  token_subtypes.h  token_types.c  token_types.h  tokenize.c  tokenize.h  types.h
src/checker/: check.c  check.h
src/debug/: ast_output.c  ast_output.h
src/lexer/: lexer.c  lexer.h  opinfo.c  opinfo.h  token_subtypes.c  token_subtypes.h  token_types.c  token_types.h  tokenize.c  tokenize.h  tokenizer.c  tokenizer.h
src/parser/: node_types.h  opinfo.c  opinfo.h  parse.c  parse.h  parser.c  parser.h
src/util/: arena.c  arena.h  array.c  array.h  assert.h  error.c  error.h  hash.c  hash.h  string.h
tests/: .neo  feature_plan.neo  syntax.neo
